# project-fuse

./: .gitignore  Cargo.toml  ED25519_ISSUE_ANALYSIS.md  Makefile  PERFORMANCE_MITIGATION_STATUS.md  PHASE3_PLAN.md  PIVOT_REVIEW.md  README.md  SECURITY.md  WITNESS_SPIKE.md  WITNESS_SPIKE_DAY1-2_INSTRUCTIONS.md  WITNESS_SPIKE_DAY1-2_RESULTS.md  WITNESS_SPIKE_FINAL_REPORT.md  WITNESS_SPIKE_PHASE1_RESULTS.md  WITNESS_SPIKE_PHASE2_RESULTS.md  WITNESS_SPIKE_PHASE3_RESULTS.md  about.md  baseline-output.txt  baseline-results.json  c2pa-benchmark-final.txt  c2pa-benchmark-output.txt  c2pa-benchmark-run2.txt  c2pa-full-benchmark.json  ed25519-dalek-output.txt  ed25519-output.txt  json-only-benchmark.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: fuzz.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  PHASE1_MILESTONE.md  QUICKSTART.md  SECURITY_AUDIT.md  TESTING.md  TESTING_PERFORMANCE.md
examples/: demo-witness.sh  generate-test-data.sh
examples/demo/: README.md  c2pa-selective-disclosure-example.json
examples/specs/: c2pa-json-only.json  c2pa-selective-disclosure.json  c2pa-signature-verification.json  ed25519-signature-verification.json  gdpr-data-residency.json  ml-model-usage.json  soc2-control-x.json  supply-chain-provenance.json
examples/systems/: c2pa-test-data-large-fixed.json  c2pa-test-data.json  ed25519-test-data-invalid.json  ed25519-test-data.json  gdpr-storage-locations.json  ml-model-usage-logs.json  sample-saas-logs-1000.json  sample-saas-logs.json  supply-chain-components.json
fuse-checkers/: Cargo.toml
fuse-checkers/src/: c2pa.rs  ed25519.rs  gdpr.rs  json_only.rs  lib.rs  ml_model.rs  soc2.rs  supply_chain.rs
fuse-cli/: Cargo.toml
fuse-cli/src/: c2pa.rs  lib.rs
fuse-core/: Cargo.toml  build.rs
fuse-core/src/: envelope.rs  error.rs  lib.rs  proof.rs  spec.rs  zkvm.rs
fuse-core/tests/: c2pa_integration.rs  c2pa_tamper.rs  checkers.rs  checkers_integration.rs  error_paths.rs  tamper_helpers.rs  zkvm_proofs.rs
fuse-core/tests/common/: fixtures.rs  mod.rs
fuse-guest/: Cargo.toml
fuse-guest/src/: checker.rs  main.rs
fuse-guest/src/checkers/: c2pa.rs  ed25519.rs  gdpr.rs  json_only.rs  ml_model.rs  mod.rs  soc2.rs  supply_chain.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: borsh_decode.rs  c2pa_parser.rs  ed25519_verification.rs  spec_validation.rs
scripts/: coverage.sh
specs/: VCE_SPECIFICATION_V0.1.md
tests/: c2pa_integration.rs  c2pa_tamper.rs
tests-package/: Cargo.toml
tests-package/src/: c2pa_integration.rs  c2pa_tamper.rs  lib.rs
