[workspace]
members = [
    "fuse-core",
    "fuse-cli",
    "fuse-checkers",
    "fuse-guest",
]
exclude = [
    "fuzz",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2021"
authors = ["Project FUSE Contributors"]
license = "Apache-2.0"
repository = "https://github.com/Mikebrown0409/project-fuse"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# RISC Zero (zkVM) - 1.0+ for stable API
risc0-zkvm = { version = "1.0", features = ["prove"] }
risc0-zkvm-platform = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[workspace.metadata]
# Feature flags for performance optimization
# - gpu: Enable GPU acceleration (CUDA/Metal) for proof generation
