[package]
name = "fuse-checkers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fuse-core = { path = "../fuse-core" }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# Ed25519 for host-side checker
ed25519-compact = "2.0"
hex.workspace = true

