[package]
name = "fuse-checkers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Compliance checker implementations for VCE protocol"
keywords = ["compliance", "checkers", "verification"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
fuse-core = "1.2.0"
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
# Ed25519 for host-side checker
ed25519-compact = "2.0"
hex.workspace = true

