[package]
name = "fuse-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fuse-prove"
path = "src/bin/fuse-prove.rs"

[[bin]]
name = "fuse-verify"
path = "src/bin/fuse-verify.rs"

[[bin]]
name = "fuse-benchmark"
path = "src/bin/fuse-benchmark.rs"

[[bin]]
name = "generate-ed25519-test-data"
path = "src/bin/generate-ed25519-test-data.rs"

[[bin]]
name = "generate-c2pa-test-data"
path = "src/bin/generate-c2pa-test-data.rs"

[[bin]]
name = "generate-real-c2pa"
path = "src/bin/generate-real-c2pa.rs"

[[bin]]
name = "inspect-c2pa"
path = "src/bin/inspect-c2pa.rs"

[dependencies]
fuse-core = { path = "../fuse-core" }
fuse-checkers = { path = "../fuse-checkers" }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
# For Ed25519 test data generation
ed25519-compact = "2.0"
ed25519-dalek = { version = "2.2", features = ["pkcs8"] }
pem = "3.0"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
hex.workspace = true
rcgen = "0.13" # For generating self-signed certificates for C2PA testing
risc0-zkvm = { version = "1.0", default-features = false }
# C2PA manifest parsing (host-side only)
c2pa = { version = "0.73", features = ["file_io", "image", "add_thumbnails"] }
img-parts = "0.3"
serde_bytes = "0.11"

