[package]
name = "fuse-fuzz"
version = "0.0.0"
authors = ["FUSE Fuzzing"]
edition = "2021"
publish = false

[workspace]

[lib]
path = "fuzz_targets/lib.rs"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fuse-core = { path = "../fuse-core" }
fuse-cli = { path = "../fuse-cli" }
fuse-checkers = { path = "../fuse-checkers" }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"
chrono = "0.4"
