[package]
name = "fuse-fuzz"
version = "0.0.0"
authors = ["FUSE Fuzzing"]
edition = "2021"
publish = false

[lib]
path = "fuzz_targets/lib.rs"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
fuse-core = { path = "../fuse-core" }
fuse-checkers = { path = "../fuse-checkers" }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"
chrono = "0.4"
img-parts = "0.3"

[[bin]]
name = "canonicalize_json"
path = "fuzz_targets/canonicalize_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "c2pa_parser"
path = "fuzz_targets/c2pa_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ed25519_verification"
path = "fuzz_targets/ed25519_verification.rs"
test = false
doc = false
bench = false

[[bin]]
name = "spec_validation"
path = "fuzz_targets/spec_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "borsh_decode"
path = "fuzz_targets/borsh_decode.rs"
test = false
doc = false
bench = false
