[package]
name = "fuse-fuzz"
version = "0.0.0"
authors = ["FUSE Fuzzing"]
edition = "2021"
publish = false

[lib]
path = "fuzz_targets/lib.rs"

[package.metadata]
cargo-fuzz = true

# Minimal dependencies - only add what each target needs
[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"
img-parts = "0.3"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

# Only ed25519_verification needs these heavy deps
# Use optional dependencies to avoid building RISC Zero for other targets
[dependencies.fuse-core]
path = "../fuse-core"
optional = true

[dependencies.fuse-checkers]
path = "../fuse-checkers"
optional = true

# Feature flags to control which deps are built
[features]
default = []
ed25519 = ["fuse-core", "fuse-checkers"]

[[bin]]
name = "canonicalize_json"
path = "fuzz_targets/canonicalize_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "c2pa_parser"
path = "fuzz_targets/c2pa_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "spec_validation"
path = "fuzz_targets/spec_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "borsh_decode"
path = "fuzz_targets/borsh_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ed25519_verification"
path = "fuzz_targets/ed25519_verification.rs"
test = false
doc = false
bench = false
required-features = ["ed25519"]